<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:background="@drawable/background"
                    tools:ignore="MissingConstraints">

                    <ImageView
                        android:id="@+id/userImage"
                        android:layout_width="120dp"
                        android:layout_height="113dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="40dp"
                        android:importantForAccessibility="no"
                        android:scaleType="centerCrop"
                        android:src="@drawable/profile"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.544"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/myUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:text="@string/name"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/userImage" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="392dp"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginBottom="48dp"
                    android:background="@drawable/white_bg"
                    android:elevation="3dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:foregroundGravity="center"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/issue_detail"
                            android:textColor="#D52356"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:padding="10dp"
                            android:text="@string/issue_title"
                            android:textColor="#5F08FA"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/issueTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:gravity="end"
                            android:padding="10dp"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textView99"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:padding="10dp"
                            android:text="@string/issue_creation_date"
                            android:textColor="#5F08FA"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/createdDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:gravity="end"
                            android:padding="10dp"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:padding="10dp"
                            android:text="@string/issue_solved_date"
                            android:textColor="#5F08FA"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/closedDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:gravity="end"
                            android:padding="10dp"
                            android:text="@string/issue_not_solved"
                            android:textColor="@color/black"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:padding="10dp"
                            android:text="@string/issue_description"
                            android:textColor="#5F08FA"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/issueDesc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:gravity="end"
                            android:padding="10dp"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="12sp" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textView153"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:padding="10dp"
                            android:text="@string/issue_status"
                            android:textColor="#5F08FA"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/issueStatus"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:gravity="end"
                            android:padding="10dp"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="12sp" />

                    </LinearLayout>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>